tests/data/placebo/test_vpce_sg_filter/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "default VPC security group",
        "Tags": [
          {
            "Value": "",
            "Key": "Name"
          },
          {
            "Value": "c7n-test-val",
            "Key": "c7n-test-tag"
          }
        ],
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "108.56.181.242/32"
              }
            ],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-6c7fa917"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-6c7fa917"
      }
    ],
    "ResponseMetadata": {}
  }
}
